syntax = "proto3";

package authenticationservice;

service AuthenticationService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse){}
  rpc FindUser (FindUserRequest) returns (FindUserResponse){}
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string userId = 1;
  string email = 2;
  string username = 3;
  bool isEmailVerified = 4; 
}
message FindUserRequest {
  string id = 1;
}
message FindUserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  bool isEmailVerified = 4; 
}